--- a/openapi/components/schemas/Configuration.yaml
+++ b/openapi/components/schemas/Configuration.yaml
@@ -1,26 +1,12 @@
+---
 type: object
+required:
+  - id
+  - connections
 properties:
   id:
-    type: integer
-    format: int64
-  petId:
-    type: integer
-    format: int64
-  quantity:
-    type: integer
-    format: int32
-  shipDate:
-    type: string
-    format: date-time
-  status:
-    type: string
-    description: Order Status
-    enum:
-      - placed
-      - approved
-      - delivered
-  complete:
-    type: boolean
-    default: false
-xml:
-  name: Order
+    $ref: ConfigurationId.yaml
+  connections:
+    type: array
+    items:
+      $ref: Connection.yaml
