--- a/openapi/paths/infrastructure@{infrastructure}@components.yaml
+++ b/openapi/paths/infrastructure@{infrastructure}@components.yaml
@@ -1,15 +1,25 @@
+---
 get:
   tags:
-    - infrastructure
+  - infrastructure
   summary: Get infrastructure components
   description: ''
   operationId: getInfrastructureComponents
   parameters:
-    - in: path
-      name: infrastructure
-      required: true
-      schema:
-        type: string
+  - in: path
+    name: infrastructure
+    required: true
+    schema:
+      $ref: ../components/schemas/InfrastructureId.yaml
   responses:
+    '200':
+      description: Success
+      content:
+        application/json:
+          schema:
+            type: array
+            description: List of infrastructure components
+            items:
+              $ref: ../components/schemas/Component.yaml
     '405':
       description: Invalid input
