fix typo in GitHub workflow

--- a/.github/workflows/build-docs.yaml
+++ b/.github/workflows/build-docs.yaml
@@ -15,7 +15,7 @@ jobs:
       run: cp docs/* public/
     - name: Build middleware API
       run: npx redoc-cli bundle -t docs/template.html -o public/middleware.html openapi/middleware/openapi.yaml
-    - name: Build docs
+    - name: Build universal API
       run: npx redoc-cli bundle -t docs/template.html -o public/universal-api.html openapi/universal-api/openapi.yaml
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
