--- a/openapi/universal-api/components/schemas/SignalDescriptionList.yaml
+++ b/openapi/universal-api/components/schemas/SignalDescriptionList.yaml
@@ -1,6 +1,5 @@
 ---
-SignalDescriptionList:
-  type: array
-  title: List of signal description
-  items:
-    $ref: 'SignalDescription.yaml'
+type: array
+title: List of signal description
+items:
+  $ref: SignalDescription.yaml
