--- a/openapi/universal-api/components/schemas/SignalIdList.yaml
+++ b/openapi/universal-api/components/schemas/SignalIdList.yaml
@@ -1,10 +1,9 @@
 ---
-SignalIdList:
-  type: array
-  title: Signal ID list
-  items:
-    $ref: 'SignalId.yaml'
-  example:
-  - aachen/lv/bus1/voltage/a
-  - aachen/lv/bus1/voltage/b
-  - aachen/lv/bus1/voltage/c
+type: array
+title: Signal ID list
+items:
+  $ref: SignalId.yaml
+example:
+- aachen/lv/bus1/voltage/a
+- aachen/lv/bus1/voltage/b
+- aachen/lv/bus1/voltage/c
