--- a/.github/workflows/build-docs.yaml
+++ b/.github/workflows/build-docs.yaml
@@ -14,9 +14,9 @@ jobs:
     - name: Copy static assets
       run: cp docs/* public/
     - name: Build middleware API
-      run: npx redoc-cli bundle -t docs/template.html -o public/middleware.html openapi/middleware/openapi.yaml
+      run: npx redoc-cli build -t docs/template.html -o public/middleware.html openapi/middleware/openapi.yaml
     - name: Build universal API
-      run: npx redoc-cli bundle -t docs/template.html -o public/universal-api.html openapi/universal-api/openapi.yaml
+      run: npx redoc-cli build -t docs/template.html -o public/universal-api.html openapi/universal-api/openapi.yaml
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
