--- a/openapi/universal-api/components/schemas/SignalId.yaml
+++ b/openapi/universal-api/components/schemas/SignalId.yaml
@@ -1,6 +1,6 @@
 ---
 type: string
 title: Signal ID
-pattern: ^[a-z0-9-_/]$
+pattern: ^[a-z0-9-_/]+$
 description: A globally unique identifier for the signal
 example: aachen/lv/bus1/voltage/a
