final touches for v2

--- a/openapi/universal-api/components/schemas/EventQueue.yaml
+++ b/openapi/universal-api/components/schemas/EventQueue.yaml
@@ -2,5 +2,4 @@
 type: array
 description: An list of events ordered by their event ID.
 items:
-  schema:
-    $ref: ../components/schemas/Event.yaml
+  $ref: Event.yaml
