--- a/openapi/universal-api/components/schemas/Event.yaml
+++ b/openapi/universal-api/components/schemas/Event.yaml
@@ -1,8 +1,8 @@
 ---
 allOf:
-- $ref: ../components/schemas/Sample.yaml
+- $ref: Sample.yaml
 - type: object
   properties:
     id:
-      $ref: ../components/schemas/EventId.yaml
+      $ref: EventId.yaml
 
