First working version of VILLASnode config files
Signed-off-by: pipeacosta <pipeacosta@gmail.com>

--- a/config_mgmt/node_ri1.conf
+++ b/config_mgmt/node_ri1.conf
@@ -1,80 +1,90 @@
 http = {
-        port = 8081
+	port = 8081
 }
 
 nodes = {
-  node_ri1_api= {
-    type="api"
-    in = {
-              signals = (
-                                {
-                                        name = "ri2::amp:P",
-                                        type = "float",
-                                        unit = "mW",
-                                        rate = 1,
-                                        readable = true,
-                                        writable = false,
-                                        payload = "samples"
-                                },
-                                {
-                                        name = "ri2::amp:Q",
-                                        type = "float",
-                                        unit = "pu",
-                                        rate = 1,
-                                        readable = true,
-                                        writable = false,
-                                        payload = "samples"
-                                }
-                        )
 
+    node_ri1_xport = {
+        type = "socket",
+        layer = "udp",
+        in = {
+            address = "*:4445",
+            signals = (
+                { name = "p", type = "float", enabled = true},
+                { name = "q", type = "float", enabled = true}
+            )
         },
         out = {
-                        signals = (
-                                # Output signals have no name, type and unit settings as those are implicitly
-                                # derived from the signals which are routed to this node
-                                {
-                                        description = "Frequency",
-                                        rate = 1,
-                                        readable = true,
-                                        writable = false,
-                                        payload = "samples"
-                                },
-                                {
-                                        description = "Voltage",
-                                        rate = 1,
-                                        readable = true,
-                                        writable = false,
-                                        payload = "samples"
-                                }
-                        )
-                }
-  },
-
-
-  node_ri1_xport= {
-            type = "socket",
-            layer = "udp",
-            format = {
-                type = "json",
-                compact = true
-            },
-            in = {
-              address = "*:4445",
-            },
-            out = {
-              address = "127.0.0.1:4446",
-            }
+            address = "villas_2:4446"
+        }
     }
+
+	node_ri1_api = {
+		type = "api"
+
+		in = {
+			signals = (
+				{
+					name = "ri1-rtds-f",
+					type = "float",
+					unit = "Hz",
+					description = "Frequency",
+					rate = 1,
+					readable = true,
+					writable = false,
+					payload = "samples"
+				},
+				{
+					name = "ri1-rtds-u",
+					type = "float",
+					unit = "kV",
+					description = "Voltage",
+					rate = 1,
+					readable = true,
+					writable = false,
+					payload = "samples"
+				}
+			)
+		}
+
+		out = {
+			signals = (
+				# Output signals have no name, type and unit settings as those are implicitly
+				# derived from the signals which are routed to this node
+				{
+					description = "Active power",
+					rate = 1,
+					readable = true,
+					writable = false,
+					payload = "samples"
+				},
+				{
+					description = "Reactive power",
+					rate = 1,
+					readable = true,
+					writable = false,
+					payload = "samples"
+				}
+			)
+		}
+	}
 }
 
 paths = (
-        {
-                in = "node_ri1_api"
-                out = "node_ri1_xport"
-        },
-        {
-                in = "node_ri1_xport"
-                out = "node_ri1_api"
-        }
-
+	{
+		in = [
+			"node_ri1_api"
+		]
+		out = [
+			"node_ri1_xport"
+		]
+	},
+	{
+		in = [
+			"node_ri1_xport"
+		]
+		out = [
+			"node_ri1_api"
+		]
+	}
 )
