--- a/config_mgmt/node_ri2.conf
+++ b/config_mgmt/node_ri2.conf
@@ -1,81 +1,90 @@
 http = {
-   port = 8080
+	port = 8080
 }
 
 nodes = {
-  node_ri2_api= {
-    type="api"
-    in = {
-              signals = (
-                                {
-                                        name = "ri1::rtds:f",
-                                        type = "float",
-                                        unit = "Hz",
-                                        rate = 1,
-                                        readable = true,
-                                        writable = false,
-                                        payload = "samples"
-                                },
-                                { 
-                                        name = "ri1::rtds:U",
-                                        type = "float",
-                                        unit = "kV",
-                                        rate = 1,
-                                        readable = true,
-                                        writable = false,
-                                        payload = "samples"
-                                }
-                        )
-
-        },
-        out = {
-                        signals = (
-                                # Output signals have no name, type and unit settings as those are implicitly
-                                # derived from the signals which are routed to this node
-                                {
-                                        description = "Active Power",
-                                        rate = 1,
-                                        readable = true,
-                                        writable = false,
-                                        payload = "samples"
-                                },
-                                {
-                                        description = "Reactive Power",
-                                        rate = 1,
-                                        readable = true,
-                                        writable = false,
-                                        payload = "samples"
-                                }
-                        )
-                }
-    },
-
 
     node_ri2_xport = {
-            type = "socket",
-            layer = "udp",
-            format = {
-                type = "json",
-                compact = true
-            },
+        type = "socket",
+        layer = "udp",
         in = {
-              address = "*:4446",
+            address = "*:4446",
+            signals = (
+                { name = "f", type = "float", enabled = true},
+                { name = "u", type = "float", enabled = true}
+            )
+        },
+        out = {
+            address = "villas_1:4445"
+        }
+    }
 
-            },
-            out = {
-                address = "127.0.0.1:4445",
-            }
-     }
+	node_ri2_api = {
+		type = "api"
+
+		in = {
+			signals = (
+				{
+					name = "ri2-amp-p",
+					type = "float",
+					unit = "mW",
+					description = "Active power",
+					rate = 1,
+					readable = true,
+					writable = false,
+					payload = "samples"
+				},
+				{
+					name = "ri2-amp-q",
+					type = "float",
+					unit = "pu",
+					description = "Reactive power",
+					rate = 1,
+					readable = true,
+					writable = false,
+					payload = "samples"
+				}
+			)
+		}
+
+		out = {
+			signals = (
+				# Output signals have no name, type and unit settings as those are implicitly
+				# derived from the signals which are routed to this node
+				{
+					description = "Frequency",
+					rate = 1,
+					readable = true,
+					writable = false,
+					payload = "samples"
+				},
+				{
+					description = "Voltage",
+					rate = 1,
+					readable = true,
+					writable = false,
+					payload = "samples"
+				}
+			)
+		}
+	}
 }
 
 paths = (
-        {
-                in = "node_ri2_api"
-                out = "node_ri2_xport"
-        },
-        {
-                in = "node_ri2_xport"
-                out = "node_ri2_api"
-        }
-
+	{
+		in = [
+			"node_ri2_api"
+		]
+		out = [
+			"node_ri2_xport"
+		]
+	},
+	{
+		in = [
+			"node_ri2_xport"
+		]
+		out = [
+			"node_ri2_api"
+		]
+	}
 )
