Improved signal naming in receiving side
Signed-off-by: pipeacosta <pipeacosta@gmail.com>

--- a/config_mgmt/node_ri1.conf
+++ b/config_mgmt/node_ri1.conf
@@ -7,11 +7,15 @@ nodes = {
     node_ri1_xport = {
         type = "socket",
         layer = "udp",
+		format = {
+			type = "json",
+			compact = true
+		},
         in = {
             address = "*:4445",
             signals = (
-                { name = "p", type = "float", enabled = true},
-                { name = "q", type = "float", enabled = true}
+                { name = "ri2-amp-p", type = "float", enabled = true},
+                { name = "ri2-amp-q", type = "float", enabled = true}
             )
         },
         out = {
