--- a/config_mgmt/node_ri2.conf
+++ b/config_mgmt/node_ri2.conf
@@ -7,11 +7,15 @@ nodes = {
     node_ri2_xport = {
         type = "socket",
         layer = "udp",
+		format = {
+			type = "json",
+			compact = true
+		},
         in = {
             address = "*:4446",
             signals = (
-                { name = "f", type = "float", enabled = true},
-                { name = "u", type = "float", enabled = true}
+                { name = "ri1-rtds-f", type = "float", enabled = true},
+                { name = "ri1-rtds-u", type = "float", enabled = true}
             )
         },
         out = {
